Fix transparent verification checkmark in dark mode
Fixes Issue https://github.com/element-hq/element-web/issues/28285

--- a/res/css/views/rooms/_E2EIcon.pcss
+++ b/res/css/views/rooms/_E2EIcon.pcss
@@ -59,3 +59,8 @@ Please see LICENSE files in the repository root for full details.
     mask-image: url("$(res)/img/e2e/verified.svg");
     background-color: $e2e-verified-color;
 }
+
+.mx_E2EIcon_verified .mx_E2EIcon_normal::after {
+    mask-size: 90%;
+    background-color: white;
+}
